[gd_scene load_steps=12 format=2]

[ext_resource path="res://Score.tscn" type="PackedScene" id=1]
[ext_resource path="res://Celinha.tscn" type="PackedScene" id=2]
[ext_resource path="res://BadMolecule.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/body/prostate.png" type="Texture" id=4]
[ext_resource path="res://assets/background.jpg" type="Texture" id=5]
[ext_resource path="res://Prostate.gd" type="Script" id=6]
[ext_resource path="res://assets/fonts/xolonium-regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/pause.png" type="Texture" id=8]
[ext_resource path="res://PauseOrgan.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[node name="Prostate" type="Node2D"]
pause_mode = 1
script = ExtResource( 6 )
badMolecule = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 509, 302 )
scale = Vector2( 0.16, 0.138222 )
texture = ExtResource( 5 )

[node name="ProstateStaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="ProstateImage" type="Sprite" parent="ProstateStaticBody2D"]
position = Vector2( 534, 299 )
scale = Vector2( 1.12774, 1.12774 )
texture = ExtResource( 4 )

[node name="ProstateCollisionPolygon" type="CollisionPolygon2D" parent="ProstateStaticBody2D"]
build_mode = 1
polygon = PoolVector2Array( 270, 64, 345, 122, 321, 143, 302, 172, 296, 205, 291, 245, 288, 289, 293, 323, 303, 356, 313, 386, 328, 407, 344, 426, 359, 440, 382, 455, 406, 465, 438, 475, 477, 473, 504, 460, 514, 542, 563, 544, 571, 462, 595, 480, 614, 482, 633, 480, 663, 470, 696, 457, 715, 440, 734, 419, 758, 384, 770, 347, 780, 295, 781, 260, 782, 224, 775, 198, 765, 173, 756, 151, 743, 130, 721, 122, 803, 68 )

[node name="ProstatePosition1" type="Position2D" parent="ProstateStaticBody2D"]
position = Vector2( 533, 107 )

[node name="ProstatePosition2" type="Position2D" parent="ProstateStaticBody2D"]
position = Vector2( 644, 278 )

[node name="ProstatePosition3" type="Position2D" parent="ProstateStaticBody2D"]
position = Vector2( 530, 503 )

[node name="ProstatePosition4" type="Position2D" parent="ProstateStaticBody2D"]
position = Vector2( 377, 193 )

[node name="Celinha" parent="." instance=ExtResource( 2 )]
position = Vector2( 490, 224 )

[node name="ReturnButton" type="Button" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 104.0
margin_bottom = 42.0
theme = SubResource( 5 )
text = "VOLTAR"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="Score" parent="." instance=ExtResource( 1 )]
position = Vector2( -32, -176 )
scale = Vector2( 1.2, 1.2 )

[node name="PauseButton" type="Button" parent="."]
margin_left = 904.0
margin_top = 485.0
margin_right = 1428.0
margin_bottom = 1003.0
rect_scale = Vector2( 0.2, 0.2 )
icon = ExtResource( 8 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Pause" parent="CanvasLayer" instance=ExtResource( 11 )]

[connection signal="pressed" from="ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="pressed" from="PauseButton" to="CanvasLayer/Pause" method="_on_PauseButton_pressed"]
